navbar + footer + favorite

--- a/src/components/NewBook/NewBook.css
+++ b/src/components/NewBook/NewBook.css
@@ -1,4 +1,4 @@
-.add-admin {
+.new-book {
   background-color: rgb(29, 117, 29);
   padding: 1rem;
   margin: 2rem auto;
@@ -9,7 +9,7 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
 
-.add-admin button {
+.new-book button {
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
@@ -20,19 +20,19 @@
   margin-right: 1rem;
 }
 
-.add-admin button:hover,
-.add-admin button:active {
+.new-book button:hover,
+.new-book button:active {
   background-color: rgb(55, 55, 165);
   border-color: rgb(55, 55, 165);
 }
 
-.add-admin button.alternative {
+.new-book button.alternative {
   color: #220131;
   border-color: transparent;
   background-color: transparent;
 }
 
-.add-admin button.alternative:hover,
-.add-admin button.alternative:active {
+.new-book button.alternative:hover,
+.new-book button.alternative:active {
   background-color: #ddb3f8;
 }
